# renpy-live2d-plus

./: README.md  pyproject.toml
src/rpyl2dp/: main.py  rpyl2dp.py
