[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "renpy-live2d-plus"
version = "0.0.1"
authors = [
    { name="GunGuyDude", email="kyleleungsauhay@gmail.com" },
]
description = "A package for better Live2D motion playback in Ren'Py"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/GunGuyDude-Python/renpy-live2d-plus"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
namespaces = false  # true by default